# Community-Forum-Backend

./: .gitignore  pyproject.toml  requirements.txt
Test/: __init__.py
deploy/: .dockerignore  Dockerfile  deployment.sh  docker-compose.yaml
src/client/: cockroach.py  db.py  fastAPI.py
src/db/: articleHandler.py  main.py  postHandler.py  reactionHandler.py  userHandler.py
src/routers/: postRouter.py  reactionRouter.py  userRouter.py
