[tool.poetry]
name = "forum-backend"
version = "0.1.0"
description = ""
authors = ["ATISHAY JAIN <atishayj2202@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.21"
sqlalchemy-cockroachdb = "^2.0.1"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
